# hubo_ros_control

./: .gitignore  README.md
hubo_head_controller/: CMakeLists.txt  package.xml
hubo_head_controller/src/hubo_head_controller/: laser_scan_controller.py  point_head_controller.py  test_head.py
hubo_ros_control/: CMakeLists.txt  package.xml
hubo_trajectory_interface/: CMakeLists.txt  README.md  package.xml
hubo_trajectory_interface/include/hubo_trajectory_interface/: hubo_trajectory.hpp  hubo_trajectory_hubo_motion_interface.hpp
hubo_trajectory_interface/launch/: hubo_trajectory_action_hubo_motion.launch
hubo_trajectory_interface/scripts/: hubo_read_trajectory.py  play_ach_trajectory.py
hubo_trajectory_interface/src/: hubo_trajectory.cpp  hubo_trajectory_action.cpp  hubo_trajectory_compromise_interface.cpp  hubo_trajectory_hubo_motion_interface.cpp  hubo_trajectory_ideal_interface.cpp
hubo_trajectory_interface/test_data/: ach_final.traj  open_hands.traj  open_hands_2.traj
hubo_trajectory_interface/test_data/08012013/set1/: movetraj0_openhands.traj  movetraj1.traj  movetraj1_closehands.traj  movetraj2.traj  movetraj2_openhands.traj  movetraj3.traj  movetraj4.traj  movetraj4_closehands.traj  movetraj5.traj
hubo_trajectory_interface/test_data/08012013/set2/: movetraj0.traj  movetraj0_openhands.traj  movetraj1.traj  movetraj1_closehands.traj  movetraj2.traj  movetraj2_openhands.traj  movetraj3.traj  movetraj4.traj  movetraj4_closehands.traj  movetraj5.traj
